--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .btn-red {
+    @apply bg-red-900 text-white text-sm rounded py-1 px-2;
+  }
+}
